Styling for education form and new education item

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,7 +34,7 @@
 .CVSection{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     height: 100%;
     flex-grow: 1;
