--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,4 @@
 :root{
-    --formWidth: 30%;
     --formBG: rgba(25, 116, 146, 0.584);
     --CVBG: rgb(236, 236, 236);
 }
@@ -24,11 +23,15 @@
     align-items: center;
     gap: 1rem;
 
-    width: var(--formWidth);
-    height: 100%;
+    min-width: 400px;
+    width: 30%;
+    height: calc(100dvh - 4rem);
     padding-top: 2rem;
+    padding-bottom: 2rem;
 
     background-color: var(--formBG);
+
+    overflow-y: scroll;
 }
 
 .CVSection{
