--- a/src/styles/WorkForm.css
+++ b/src/styles/WorkForm.css
@@ -1,10 +1,10 @@
-.educationFormContainer{
+.workFormContainer{
     width: 80%;
     border: 1px solid black;
     padding: .5rem;
 }
 
-.educationFormItem{
+.workFormItem{
     display: flex;
     flex-direction: column;
     gap: .5rem;
@@ -13,30 +13,30 @@
     padding: .5rem;
 }
 
-.educationFormItemRow{
+.workFormItemRow{
     display: flex;
     justify-content: space-between;
     
 }
 
-.educationFormItemRow>button{
+.workFormItemRow>button{
     border-radius: 5px;
     background-color: rgb(172, 20, 20);
 }
 
-.educationFormItemRow>button:hover{
+.workFormItemRow>button:hover{
     cursor: pointer;
     background-color: rgba(172, 20, 20, 0.335);
 }
 
-.educationFormItemRow>button:active{
+.workFormItemRow>button:active{
     cursor: pointer;
     background-color: rgba(255, 0, 0)
 }
 
 
 
-.newEducationItemForm{
+.newWorkItemForm{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -53,7 +53,7 @@
     cursor: pointer;
 }
 
-.newEducationFormInput{
+.newWorkFormInput{
     width: 35%;
 }
 
