--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,45 +1,58 @@
-:root{
-    --formBG: rgba(25, 116, 146, 0.584);
-    --CVBG: rgb(236, 236, 236);
+:root {
+  --formBG: rgba(25, 116, 146, 0.584);
+  --CVBG: rgb(236, 236, 236);
 }
 
-*{
-    margin: 0;
+* {
+  margin: 0;
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 100dvh;
-    width: 100dvw;
-    
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100dvh;
+  width: 100dvw;
 }
 
-.formSection{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    gap: 1rem;
+.formSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
 
-    min-width: 400px;
-    width: 30%;
-    height: calc(100dvh - 4rem);
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+  width: 30%;
+  height: calc(100dvh - 4rem);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
-    background-color: var(--formBG);
+  background-color: var(--formBG);
 
-    overflow-y: scroll;
+  overflow-y: scroll;
+  opacity: 1;
+  width: 30%;
+  transition: opacity 0.3s, width 0.3s;
+
 }
 
-.CVSection{
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    height: 100%;
-    flex-grow: 1;
-    background-color: var(--CVBG);
+.formSection-exit {
+    opacity: 0;
+    width: 0%;
+}
+
+.formSection-enter{
+    opacity: 1;
+    width: 50%;
+}
+
+
+.CVSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  height: 100%;
+  flex-grow: 1;
+  background-color: var(--CVBG);
 }
