--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,7 +17,7 @@
   align-items: center;
   justify-content: space-between;
   height: 100dvh;
-  width: 100dvw;
+  overflow-y: scroll;
 }
 
 .formSection {
@@ -36,8 +36,6 @@
   color: var(--light);
 
   overflow-y: scroll;
-  opacity: 1;
-  width: 30%;
   transition: opacity 0.3s, width 0.3s;
 
   &::-webkit-scrollbar {
@@ -77,18 +75,9 @@
 .sidebarHeader > button {
   border-radius: 5px;
   border: 0px;
-  padding: 10px;
-  width: 100px;
+  width: 3rem;
+  height: 2.5rem;
   background-color: var(--secondary);
-}
-
-.sidebarHeader > button:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.sidebarHeader > button:active {
-  opacity: 1;
   cursor: pointer;
 }
 
@@ -97,7 +86,42 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  height: 100%;
+  min-height: 100dvh;
   flex-grow: 1;
   background-color: var(--CVBG);
+}
+
+.sidebarIcon {
+  height: 2rem;
+  width: 2rem;
+  cursor: pointer;
+  transition: all 0.1s ease;
+}
+
+.sidebarIcon:hover {
+  color: var(--light);
+}
+
+.editButton {
+  border-radius: 5px;
+  border: 0px;
+  width: 3rem;
+  height: 2.5rem;
+  cursor: pointer;
+  background-color: transparent;
+  position: absolute;
+  left: 2rem;
+  top: 2rem;
+}
+
+.editIcon {
+  height: 3rem;
+  width: 3rem;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  color: var(--primary);
+}
+
+.editIcon:hover {
+  color: var(--secondary);
 }
