--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,7 +17,6 @@
   align-items: center;
   justify-content: space-between;
   height: 100dvh;
-  overflow-y: scroll;
 }
 
 .formSection {
@@ -28,6 +27,7 @@
   gap: 1rem;
 
   width: 30%;
+  min-width: 400px;
   height: calc(100dvh - 4rem);
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -54,16 +54,19 @@
 .formSection-exit {
   opacity: 0;
   width: 0%;
+  min-width: 0px;
 }
 
 .formSection-enter {
   opacity: 0;
   width: 0%;
+  min-width: 0px;
 }
 
 .formSection-enter.active {
   opacity: 1;
   width: 30%;
+  min-width: 495px;
 }
 
 .sidebarHeader {
@@ -86,9 +89,10 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  min-height: 100dvh;
+  height: 100dvh;
   flex-grow: 1;
   background-color: var(--CVBG);
+  overflow-y: scroll;
 }
 
 .sidebarIcon {
