--- a/src/styles/CV.css
+++ b/src/styles/CV.css
@@ -1,17 +1,22 @@
 .cvContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
-  height: auto;
-  min-height: 100vh;
+  height: 100dvh;
 }
 
 .cvPaper {
+  margin: 2rem;
   background-color: white;
-  min-height: 800px;
   width: 40vw;
   min-width: 500px;
+  min-height: 900px;
+}
+
+.workItem > h4 {
+  word-wrap: break-word;
+  width: 100%;
 }
 
 .generalSectionCV {
@@ -39,13 +44,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  width: 25%;
+  min-width: 300px;
+  width: 55%;
   gap: 0.4rem;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid black;
   margin-bottom: 1rem;
 }
-
 .workSectionCV {
   margin-top: 1rem;
   margin-left: 10%;
@@ -61,9 +66,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  width: 25%;
-  gap: 0.4rem;
+  width: 50%;
+  min-width: 300px;
   padding-bottom: 0.5rem;
+  gap: 0.4rem;
   border-bottom: 1px solid black;
   margin-bottom: 1rem;
 }
