--- a/src/styles/CV.css
+++ b/src/styles/CV.css
@@ -7,6 +7,23 @@
   margin: 1rem;
 }
 
+.generalSectionCV > h1 {
+  font-size: 2.5rem;
+  letter-spacing: 0.1rem;
+}
+
+.generalSectionCV > h2 {
+  font-size: 1.2rem;
+  margin-bottom: 0.2rem;
+}
+
+.educationSectionCV > h1 {
+  font-size: 2.5rem;
+}
+
+.workSectionCV > h1 {
+  font-size: 2.5rem;
+}
 @media print {
   .cvPaper {
     width: 210mm; /* A4 width */
