--- a/src/styles/CV.css
+++ b/src/styles/CV.css
@@ -53,7 +53,8 @@
   background-color: var(--secondary);
 }
 
-.educationSectionCV {
+.educationSectionCV,
+.workSectionCV {
   margin-top: 1rem;
   margin-left: 10%;
   margin-right: 10%;
@@ -64,7 +65,8 @@
   gap: 0.4rem;
 }
 
-.educationItem {
+.educationItem,
+.workItem {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -78,24 +80,9 @@
 }
 
 .workSectionCV {
-  margin-top: 1rem;
-  margin-left: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  gap: 0.4rem;
+  margin-right: 0;
 }
 
 .workItem {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
   width: 50%;
-  min-width: 300px;
-  padding-bottom: 0.5rem;
-  gap: 0.4rem;
-  border-bottom: 1px solid black;
-  margin-bottom: 1rem;
 }
